# vnc_connector

./: .gitignore  CMakeLists.txt  READMD.md  README.md  main.cpp  main.qml  ssh_helper.cpp  ssh_helper.h
list/: example.yaml
